@@ -70,3 +70,4 @@
                        RO-4033: Adjust logic used for processing and assigning sequence alignment details
    3-Oct-2023    V0.77 Update PfamProvider to use new Pfam mapping file
   14-Nov-2023    V0.78 Add SPARQL functionality and version information to GlyGenProvider
+  18-Mar-2024    V0.79 Add yeast and fruitfly datasets to GlyGenProvider
